@@ -136,7 +136,7 @@ void WinEDA_ZoneFrame::CreateControls()
     SetFont( *g_DialogFont );
 
 ////@begin WinEDA_ZoneFrame content construction
-    // Generated by DialogBlocks, 06/01/2008 15:03:35 (unregistered)
+    // Generated by DialogBlocks, 24/01/2008 11:39:58 (unregistered)
 
     WinEDA_ZoneFrame* itemDialog1 = this;
 
@@ -150,6 +150,7 @@ void WinEDA_ZoneFrame::CreateControls()
     itemBoxSizer3->Add(itemBoxSizer4, 0, wxGROW|wxALL, 5);
 
     wxArrayString m_GridCtrlStrings;
+    m_GridCtrlStrings.Add(_("0.00000"));
     m_GridCtrlStrings.Add(_("0.00000"));
     m_GridCtrlStrings.Add(_("0.00000"));
     m_GridCtrlStrings.Add(_("0.00000"));
@@ -260,7 +261,7 @@ void WinEDA_ZoneFrame::CreateControls()
     if( Zone_45_Only )
         m_OrientEdgesOpt->SetSelection( 1 );
 
-    static const int GridList[3] = { 50, 100, 250 };
+    static const int GridList[4] = { 25, 50, 100, 250 };
     int selection = 0;
 
     for( unsigned ii = 0; ii < (unsigned) m_GridCtrl->GetCount(); ii++ )
@@ -473,15 +474,19 @@ bool WinEDA_ZoneFrame::AcceptOptions(bool aPromptForErrors)
     switch( m_GridCtrl->GetSelection() )
     {
     case 0:
-        g_GridRoutingSize = 50;
+        g_GridRoutingSize = 25;
         break;
 
     case 1:
-        g_GridRoutingSize = 100;
+        g_GridRoutingSize = 50;
         break;
 
 	default:
     case 2:
+        g_GridRoutingSize = 100;
+        break;
+
+    case 3:
         g_GridRoutingSize = 250;
         break;
     }
